--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/www"
+    "start": "nodemon server.js"
   },
   "author": "matheus castro brito",
   "license": "ISC",
@@ -17,5 +17,4 @@
   "devDependencies": {
     "nodemon": "^2.0.12"
   }
-  
 }
